crates/reductool-proc-macro/tests/ui/pattern_underscore.rs
use reductool_proc_macro::aitool;

#[aitool]
fn f(_: i32) {}

fn main() {}
